--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
     "openai": "^4.3.1",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.6"
   }
 }
